feat: add almox routes
